Invalid characters in Open Location dialog crashes GIMP
GIMP version: 2.10.8
Operating System: Windows 10 1809
Package: Chocolatey
Description of the bug
Putting bad characters in the Open Location dialog crashes GIMP in most cases.
Reproduction
This happens every time. You can trigger it by putting http:\
, http:@
or similar in the Open Location dialog and pressing open. It doesn't happen with just \
or asdf\ghjk
. It should be noted that the dialog doesn't actually work. If you put a normal URI in it, it doesn't crash but also doesn't open the link.
Expected result:
Displays an error message since the URI is invalid.
Actual result:
Crash.
Additional information
GNU Image Manipulation Program version 2.10.8
git-describe: GIMP_2_10_6-294-ga967e8d2c2
C compiler:
Using built-in specs.
COLLECT_GCC=W:msys64-gtk2mingw64ingcc.exe
COLLECT_LTO_WRAPPER=W:/msys64-gtk2/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/8.2.0/lto-wrapper.exe
Target: x86_64-w64-mingw32
Configured with: ../gcc-8.2.0/configure --prefix=/mingw64 --with-local-prefix=/mingw64/local --build=x86_64-w64-mingw32 --host=x86_64-w64-mingw32 --target=x86_64-w64-mingw32 --with-native-system-header-dir=/mingw64/x86_64-w64-mingw32/include --libexecdir=/mingw64/lib --enable-bootstrap --with-arch=x86-64 --with-tune=generic --enable-languages=ada,c,lto,c++,objc,obj-c++,fortran --enable-shared --enable-static --enable-libatomic --enable-threads=posix --enable-graphite --enable-fully-dynamic-string --enable-libstdcxx-filesystem-ts=yes --enable-libstdcxx-time=yes --disable-libstdcxx-pch --disable-libstdcxx-debug --disable-isl-version-check --enable-lto --enable-libgomp --disable-multilib --enable-checking=release --disable-rpath --disable-win32-registry --disable-nls --disable-werror --disable-symvers --with-libiconv --with-system-zlib --with-gmp=/mingw64 --with-mpfr=/mingw64 --with-mpc=/mingw64 --with-isl=/mingw64 --with-pkgversion='Rev3, Built by MSYS2 project' --with-bugurl=https://sourceforge.net/projects/msys2 --with-gnu-as --with-gnu-ld
Thread model: posix
gcc version 8.2.0 (Rev3, Built by MSYS2 project)
using GEGL version 0.4.12 (compiled against version 0.4.12)
using GLib version 2.58.1 (compiled against version 2.58.1)
using GdkPixbuf version 2.38.0 (compiled against version 2.38.0)
using GTK+ version 2.24.32 (compiled against version 2.24.32)
using Pango version 1.42.4 (compiled against version 1.42.3)
using Fontconfig version 2.13.1 (compiled against version 2.13.1)
using Cairo version 1.16.0 (compiled against version 1.16.0)
fatal error: unhandled exception
Stack trace:
-------------------
Error occurred on Saturday, March 9, 2019 at 07:34:31.
gimp-2.10.exe caused an Access Violation at location 0000000000448935 in module gimp-2.10.exe Reading from location 0000000000000008.
AddrPC Params
0000000000448935 0000000000000000 0000000004740E10 0000000000000128 gimp-2.10.exe!file_open_location_response [W:/msys64-gtk2/home/ender/gimp/gimp-2.10.8/app/dialogs/file-open-location-dialog.c @ 222]
0000000067F06413 0000000000D2EF00 0000000001728A60 0000000000000002 libgobject-2.0-0.dll!g_closure_invoke
0000000067F18855 0000000023DA0460 0000000000000000 00000000242938B0 libgobject-2.0-0.dll!g_signal_handler_disconnect
0000000067F20B01 00000000242938B0 00000000016713FF 0000000000000000 libgobject-2.0-0.dll!g_signal_emit_valist
0000000067F21058 0000000000000000 00007FF8FA759DB0 0000000000000000 libgobject-2.0-0.dll!g_signal_emit
0000000067F06413 000000002450D660 0000000000000094 0000000000D2F2D0 libgobject-2.0-0.dll!g_closure_invoke
0000000067F18855 0000000023D9D6E0 0000000000000000 0000000023B277B0 libgobject-2.0-0.dll!g_signal_handler_disconnect
0000000067F20B01 0000000023B277B0 0000000001643D92 0000000000000000 libgobject-2.0-0.dll!g_signal_emit_valist
0000000067F21058 0000000000000001 0000000000000000 0000000000000198 libgobject-2.0-0.dll!g_signal_emit
0000000001643EEA 0000000000000000 0000000000000000 0000000100010100 libgtk-win32-2.0-0.dll!gtk_button_clicked
00000000016EA647 0000000000000100 0001000000000001 0000000000000000 libgtk-win32-2.0-0.dll!gtk_marshal_VOID__UINT_STRING
0000000067F06413 0000000000000000 0000000000000000 0001000001000001 libgobject-2.0-0.dll!g_closure_invoke
0000000067F1809A 000000001FA7A740 0000000000000000 0000000023B277B0 libgobject-2.0-0.dll!g_signal_handler_disconnect
0000000067F2038A 0000000023B277B0 00000000017FEA1A 0000000000000000 libgobject-2.0-0.dll!g_signal_emit_valist
0000000067F21058 0000000000000000 00007FF8FA919860 0000000023B277B0 libgobject-2.0-0.dll!g_signal_emit
00000000017FF07D 0000000000000000 0000000001801C6E 00000000242938B0 libgtk-win32-2.0-0.dll!gtk_widget_translate_coordinates
00000000016E88F7 0000000000D2FA10 00000000031A2000 0000000023B25AF0 libgtk-win32-2.0-0.dll!gtk_propagate_event
00000000016E8B9B 0000000003241470 0000000064A41296 0000000003241470 libgtk-win32-2.0-0.dll!gtk_main_do_event
000000006C37961A 0000000000D2FAF0 0000000003241470 0000000000000000 libgdk-win32-2.0-0.dll!gdk_win32_drawable_get_handle
00000000649F4826 0000000000000012 0000000000000000 0000000000000000 libglib-2.0-0.dll!g_main_context_dispatch
00000000649F4A38 0000000003241470 0000000000000000 00000000031DC490 libglib-2.0-0.dll!g_main_context_dispatch
00000000649F4E83 0000000000000000 0000000000000000 0000000000000000 libglib-2.0-0.dll!g_main_loop_run
0000000000401A54 000000000000001D 0000000000F2EDE0 00007FF8F809A5E0 gimp-2.10.exe!app_run [W:/msys64-gtk2/home/ender/gimp/gimp-2.10.8/app/app.c @ 440]
00000000008B8895 0000000000000000 00000000031B7EC0 0000000000AE7E40 gimp-2.10.exe! ?? [W:/msys64-gtk2/home/ender/gimp/gimp-2.10.8/app/main.c @ 524]
00000000004013A5 0000000000000000 0000000000000000 0000000000000000 gimp-2.10.exe!__tmainCRTStartup [C:/repo/mingw-w64-crt-git/src/mingw-w64/mingw-w64-crt/crt/crtexe.c @ 339]
00000000004014DB 0000000000000000 0000000000000000 0000000000000000 gimp-2.10.exe!WinMainCRTStartup [C:/repo/mingw-w64-crt-git/src/mingw-w64/mingw-w64-crt/crt/crtexe.c @ 195]
00007FF8F80981F4 0000000000000000 0000000000000000 0000000000000000 KERNEL32.DLL!BaseThreadInitThunk
00007FF8FA92A251 0000000000000000 0000000000000000 0000000000000000 ntdll.dll!RtlUserThreadStart
gimp-2.10.exe 2.10.8.0
ntdll.dll 10.0.17763.292
KERNEL32.DLL 10.0.17763.292
KERNELBASE.dll 10.0.17763.292
msvcrt.dll 7.0.17763.1
SHELL32.dll 10.0.17763.292
cfgmgr32.dll 10.0.17763.1
libgimpcolor-2.0-0.dll
ucrtbase.dll 10.0.17763.1
shcore.dll 10.0.17763.1
RPCRT4.dll 10.0.17763.194
libgimpconfig-2.0-0.dll
combase.dll 10.0.17763.253
bcryptPrimitives.dll 10.0.17763.1
windows.storage.dll 10.0.17763.168
msvcp_win.dll 10.0.17763.1
libgimpmath-2.0-0.dll
sechost.dll 10.0.17763.1
advapi32.dll 10.0.17763.1
libgimpmodule-2.0-0.dll
profapi.dll 10.0.17763.1
powrprof.dll 10.0.17763.1
libgimpthumb-2.0-0.dll
shlwapi.dll 10.0.17763.1
GDI32.dll 10.0.17763.1
gdi32full.dll 10.0.17763.316
USER32.dll 10.0.17763.168
win32u.dll 10.0.17763.1
kernel.appcore.dll 10.0.17763.1
cryptsp.dll 10.0.17763.1
libgimpwidgets-2.0-0.dll
libgimpbase-2.0-0.dll
ole32.dll 10.0.17763.134
dbghelp.dll 6.3.9600.17298
libcairo-2.dll
libgio-2.0-0.dll 2.58.1.0
WS2_32.dll 10.0.17763.1
libglib-2.0-0.dll 2.58.1.0
libgobject-2.0-0.dll 2.58.1.0
liblcms2-2.dll
libintl-8.dll 0.19.8.0
libbabl-0.1-0.dll
libgegl-0.4-0.dll
libgmodule-2.0-0.dll 2.58.1.0
exchndl.dll 0.8.2.0
PSAPI.DLL 10.0.17763.1
libfontconfig-1.dll
libfreetype-6.dll 2.9.1.0
libgdk-win32-2.0-0.dll 2.24.32.0
IMM32.dll 10.0.17763.1
libgdk_pixbuf-2.0-0.dll 2.38.0.0
libgexiv2-2.dll
libharfbuzz-0.dll
libmypaint-1-3-0.dll
libpango-1.0-0.dll 1.42.4.0
libpangocairo-1.0-0.dll 1.42.4.0
libpangoft2-1.0-0.dll 1.42.4.0
zlib1.dll
libgegl-npd-0.4.dll
MSIMG32.dll 10.0.17763.1
libpng16-16.dll
libpixman-1-0.dll
DNSAPI.dll 10.0.17763.292
NSI.dll 10.0.17763.1
libwinpthread-1.dll 1.0.0.0
libpcre-1.dll
libffi-6.dll
mgwhelp.dll 0.8.2.0
VERSION.dll 10.0.17763.1
libbz2-1.dll
gdiplus.dll 10.0.17763.316
libexpat-1.dll
libstdc++-6.dll
libexiv2.dll
USP10.dll 10.0.17763.1
DWrite.dll 10.0.17763.168
libgraphite2.dll
libjson-c-4.dll
libfribidi-0.dll
libthai-0.dll
IPHLPAPI.DLL 10.0.17763.1
libdatrie-1.dll
libgtk-win32-2.0-0.dll 2.24.32.0
comdlg32.dll 10.0.17763.1
libgcc_s_seh-1.dll
libiconv-2.dll 1.15.0.0
libpangowin32-1.0-0.dll 1.42.4.0
COMCTL32.dll 5.82.17763.316
WINSPOOL.DRV 10.0.17763.1
bcrypt.dll 10.0.17763.1
libatk-1.0-0.dll 2.30.0.0
PROPSYS.dll 7.0.17763.1
OLEAUT32.dll 10.0.17763.292
uxtheme.dll 10.0.17763.1
9356.tmp
CRYPTBASE.DLL 10.0.17763.1
clbcatq.dll 2001.12.10941.16384
MSCTF.dll 10.0.17763.1
cairo.dll
CIE.dll
double.dll
fast-float.dll
float.dll
gegl-fixups.dll
gggl-lies.dll
gggl-table-lies.dll
gggl-table.dll
gggl.dll
gimp-8bit.dll
grey.dll
half.dll
HCY.dll
HSL.dll
HSV.dll
naive-CMYK.dll
simple.dll
sse-half.dll
sse2-float.dll
sse2-int16.dll
sse2-int8.dll
sse4-int8.dll
two-table.dll
u16.dll
u32.dll
ycbcr.dll
gegl-core.dll
libjson-glib-1.0-0.dll
rsaenh.dll 10.0.17763.1
winhttp.dll 10.0.17763.316
average.dll
blend-reflect.dll
gegl-common-gpl3.dll
gegl-common.dll
gegl-generated.dll
negation.dll
soft-burn.dll
soft-dodge.dll
subtractive.dll
hstack.dll
matting-levin.dll
libumfpack.dll
libamd.dll
libcholmod.dll
libsuitesparseconfig.dll
libmetis.dll
libgomp-1.dll
libcamd.dll
libccolamd.dll
libcolamd.dll
libopenblas.dll
libgfortran-5.dll
libquadmath-0.dll
seamless-clone.dll
libgegl-sc-0.4.dll
bayer-matrix.dll
linear-sinusoid.dll
exr-load.dll
libIlmImf-2_2.dll
libHalf-2_2.dll
libIex-2_2.dll
libIlmThread-2_2.dll
libImath-2_2.dll
gif-load.dll
jp2-load.dll
libjasper-4.dll
libjpeg-8.dll
jpg-load.dll
pixbuf.dll
png-load.dll
ppm-load.dll
raw-load.dll
libraw-16.dll
WSOCK32.dll 10.0.17763.1
rawbayer-load.dll
rgbe-load.dll
svg-load.dll
librsvg-2-2.dll
libcroco-0.6-3.dll
libxml2-2.dll
liblzma-5.dll 5.2.4.0
text.dll
tiff-load.dll
libtiff-5.dll
webp-load.dll
libwebp-7.dll
bilateral-filter-fast.dll
demosaic-bimedian.dll
demosaic-simple.dll
ditto.dll
domain-transform.dll
enlarge.dll
enlarge2.dll
gradient-map.dll
inpaint.dll
integral-image.dll
lcms-from-profile.dll
lens-correct.dll
liblensfun.dll
line-profile.dll
npd.dll
path.dll
segment-kmeans.dll
transformops.dll
vector-fill.dll
vector-stroke.dll
exr-save.dll
jpg-save.dll
npy-save.dll
png-save.dll
ppm-save.dll
rgbe-save.dll
save-pixbuf.dll
sdl-display.dll
SDL.dll 1.2.14.0
WINMM.dll 10.0.17763.1
winmmbase.dll 10.0.17763.1
tiff-save.dll
webp-save.dll
seamless-clone-compose.dll
OpenCL.dll 2.2.1.0
nvopencl64.dll 25.21.14.1917
SETUPAPI.dll 10.0.17763.292
nvfatbinaryLoader.dll 25.21.14.1917
nvapi64.dll 25.21.14.1917
dxgi.dll 10.0.17763.1
IntelOpenCL64.dll 22.20.16.4836
intelocl64.dll 7.5.0.2
task_executor64.dll 7.5.0.2
OPENGL32.dll 10.0.17763.1
GLU32.dll 10.0.17763.1
cpu_device64.dll 7.5.0.2
igdrclclassic64.dll 22.20.16.4836
igc64.dll 22.20.16.4836
igdfcl64.dll 22.20.16.4836
DEVOBJ.dll 10.0.17763.1
WINTRUST.dll 10.0.17763.292
MSASN1.dll 10.0.17763.1
CRYPT32.dll 10.0.17763.1
nvcompiler.dll 25.21.14.1917
libwimp.dll
libpixmap.dll
libpixbufloader-png.dll
dwmapi.dll 10.0.17763.1
libpixbufloader-svg.dll
mscms.dll 10.0.17763.1
USERENV.dll 10.0.17763.1
ColorAdapterClient.dll 10.0.17763.1
icm32.dll 10.0.17763.1
TextInputFramework.dll 10.0.17763.1
CoreMessaging.dll 10.0.17763.194
CoreUIComponents.dll 10.0.17763.1
ntmarta.dll 10.0.17763.1
wintypes.dll 10.0.17763.134
shfolder.dll 10.0.17763.1
apphelp.dll 10.0.17763.292
Windows 10.0.17763
DrMingw 0.8.2