Eliminate CRITICAL as https://gitlab.gnome.org/GNOME/gimp/issues/3093#note_543428